# Engineering-and-Design

./: .gitignore  .replit  AGENTS.md  README.md  _rev_history.txt  agent_rule.md  dcc.yml  excel-explorer-workflow.md  replit.md  serve.py  temp_notebook_runner.py  test_summary.txt  traceability_working.md
dcc/tracer/: README.md  __init__.py  pyproject.toml  static_dashboard.html
eks/: __init__.py  condaenv.ck5faq85.requirements.txt  eks.yml  knowledge.json  pyproject.toml  serve.py  server.py
eks/archive/: appendix_f_gaps_summary.md  eks_project_setup_config.json  phase_1.2.11_report.md  phase_1.3_initiation_harmonization_workplan.md  phase_1_appendix_f_architecture_workplan.md  phase_1_foundation_workplan_v3.52.md  phase_1_t179_t183_report.md  project_setup.json  remediation_workplan.md  schema_inheritance_chain.md
eks/config/: eks_asset_base_schema.json  eks_asset_config.json  eks_asset_setup_schema.json  eks_base_schema.json  eks_config.json  eks_ontology_base_schema.json  eks_ontology_config.json  eks_ontology_setup_schema.json  eks_setup_schema.json
eks/engine/: __init__.py  eks_engine_pipeline.py
eks/log/: gemini.md  issue_log.md  opencode.md  test_log.md  update_log.md
eks/test/: a3_extract.txt  check_p4.py  check_p4b.py  check_p4c.py  datadrop_output.txt  fix_p4_r40.py  gap_analysis.py  inspect_datadrop.py  inspect_datadrop_v2.py  p4_context.txt  p4_head.txt  p4_legend.txt  p4_r40_check.txt  p4_t44.txt  patch_appendix.py  patch_master_workflow.py  patch_p2_p3_r40_r42.py  patch_p4_final.py  patch_p4_logs.py  patch_phase1_complete.py  patch_workplans.py  (+23 more)
(+1096 files in other folders)
